# salesforce-documentation-context

./: .gitignore  README.md  llms.txt  package.json  pyproject.toml  src.txt  tsconfig.json
documentation/: api-action.md  pkg2-dev.md  salesforce-apex-developer-guide.md  salesforce-soql-sosl.md  sfdx-cli-reference.md  sfdx-dev.md  sfdx-setup.md  sfdx_dev.md
sfdocctx/: cli.py  docs.py  fsutil.py  github.py  hashing.py  llms.py  pdf.py  src_list.py  update.py
src/: update.ts
src/lib/: docs.ts  fs.ts  github.ts  hash.ts  limit.ts  llms.ts  pdf.ts  srcList.ts
