[project]
name = "salesforce-documentation-context"
version = "0.1.0"
description = "Download Salesforce PDF docs, convert to Markdown, and generate llms.txt."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pymupdf4llm>=0.0.16",
]

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "ruff>=0.5.0",
]

[project.scripts]
update = "sfdocctx.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"
